--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
 
-  <groupId>com.sangam</groupId>
+  <groupId>com.sangam.aggromart</groupId>
   <artifactId>common</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
