--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -38,7 +38,7 @@
     </dependency>
     <dependency>
       <groupId>com.sangam.aggromart</groupId>
-      <artifactId>core</artifactId>
+      <artifactId>common</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
 
