--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+
+        <dependency>
+          <groupId>com.sangam.aggromart</groupId>
+          <artifactId>common</artifactId>
+          <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
@@ -66,6 +72,16 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+            <configuration>
+              <classifier>exec</classifier>
+            </configuration>
+          </execution>
+        </executions>
         <configuration>
           <excludes>
             <exclude>
