--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -58,7 +58,7 @@
       <version>3.0.0</version>
     </dependency>
     <dependency>
-      <groupId>com.sangam</groupId>
+      <groupId>com.sangam.aggromart</groupId>
       <artifactId>common</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
