refactor codesand pom

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
 
-  <groupId>com.sangam.aggromart</groupId>
+  <groupId>com.sangam.aggromart.common</groupId>
   <artifactId>common</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -19,6 +19,10 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
   </dependencies>
   <build>
