--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.5.4</version>
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
+
   <groupId>com.sangam.aggromart</groupId>
   <artifactId>saga-chreography-aggromart</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>saga-chreography-aggromart</name>
+  <name>${project.groupId}:${project.artifactId}</name>
   <description>saga choreography demo project</description>
   <packaging>pom</packaging>
   <properties>
@@ -17,41 +24,22 @@
 <!--    <module>payment-service</module>-->
 <!--    <module>order-service</module>-->
   </modules>
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.5.4</version>
-  </parent>
-  <dependencies>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.projectreactor</groupId>
-      <artifactId>reactor-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-stream</artifactId>
-      <scope>test</scope>
-      <classifier>test-binder</classifier>
-      <type>test-jar</type>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.kafka</groupId>
-      <artifactId>spring-kafka-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-validation</artifactId>
-    </dependency>
-  </dependencies>
+
   <dependencyManagement>
     <dependencies>
+      <!-- dependencies available and shared between the child modules -->
+      <dependency>
+        <groupId>com.sangam.aggromart.common</groupId>
+        <artifactId>common</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
+      <!-- dependencies available and shared between the child modules -->
+      <dependency>
+        <groupId>com.sangam.aggromart.product</groupId>
+        <artifactId>product-service</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
+
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
@@ -59,12 +47,6 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-
-        <dependency>
-          <groupId>com.sangam.aggromart</groupId>
-          <artifactId>common</artifactId>
-          <version>1.0-SNAPSHOT</version>
-        </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
@@ -72,16 +54,6 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>repackage</goal>
-            </goals>
-            <configuration>
-              <classifier>exec</classifier>
-            </configuration>
-          </execution>
-        </executions>
         <configuration>
           <excludes>
             <exclude>
